--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
 </head>
 
 <body>
-  
+  <div id = "header">
+    <h1> Browadway Design </h1>
+    <p><a href="#header"> Home </a></p>
+    <p><a href="#main"> Process </a></p>
+    <p><a href="#end"> Work </a></p>
+    <p><a href="#end"> Team </a></p>
+    <p><a href="#end"> Contact </a></p>
+  </div>
+
+  <div id = "main">
+    <h2> Our Process </h2>
+    <p><img src="identify.svg"></p>
+    <p class="name"> Identify </p><break></break>
+    <p class="descripton"> We focus on the most important details </p>
+
+    <p><img src="understand.svg"></p>
+    <p class="name"> Understand </p><break></break>
+    <p class="descripton"> We study our projects inside and out </p>
+
+    <p><img src="execute.svg"></p>
+    <p class="name"> Execute </p></break></break>
+    <p class="description"> We put everything we have into our work </p>
+  </div>
+
+  <h3> Designed in New York </h3><break></break>
+
+
+  <div id= "end">
+    <p class="name"> Portfolio </p><break></break>
+    <p class="description"> Coming Soon </p>
+
+    <p class="name"> Team </p><break></break>
+    <p class="descroption"> We're Hiring! </p><break></break>
+
+    <p class= "name"> Contact </p><break></break>
+    <p class="description"> Phone: (555)-555-5555 </p>
+    <p class="description"> E-mail: test@example.com </p>
+    <p class="description"> Twitter &copy; test </p>
+  </div>
 </body>
+<div id="footer">
+  <p> &copy; Broadway 2018 <a href="#"> Home </a> <a href="#"> About </a> <a href="#"> Work </a> <a href="#"> Team </a> <a href="#"> Contact </a>
+</div>
 </html>
