--- a/index.html
+++ b/index.html
@@ -6,47 +6,57 @@
 </head>
 
 <body>
-  <div id = "header">
+  <div class= "hd" id = "header">
     <h1> Browadway Design </h1>
-    <p><a href="#header"> Home </a></p>
-    <p><a href="#main"> Process </a></p>
-    <p><a href="#end"> Work </a></p>
-    <p><a href="#end"> Team </a></p>
-    <p><a href="#end"> Contact </a></p>
+
+    <p><a class="btn-nav" href="#header"> Home </a></p>
+    <p><a class="btn-nav" href="#main"> Process </a></p>
+    <p><a class="btn-nav" href="#work"> Work </a></p>
+    <p><a class="btn-nav" href="#team"> Team </a></p>
+    <p><a class="btn-nav" href="#contact"> Contact </a></p>
   </div>
 
-  <div id = "main">
+  <div class= "sp_main" id = "main">
     <h2> Our Process </h2>
     <p><img src="identify.svg"></p>
-    <p class="name"> Identify </p><break></break>
-    <p class="descripton"> We focus on the most important details </p>
+    <h3> Identify </h3>
+    <p> We focus on the most important details </p>
 
     <p><img src="understand.svg"></p>
-    <p class="name"> Understand </p><break></break>
-    <p class="descripton"> We study our projects inside and out </p>
+    <h3> Understand </h3>
+    <p> We study our projects inside and out </p>
 
     <p><img src="execute.svg"></p>
-    <p class="name"> Execute </p></break></break>
-    <p class="description"> We put everything we have into our work </p>
+    <h3> Execute </h3>
+    <p> We put everything we have into our work </p>
   </div>
 
-  <h3> Designed in New York </h3><break></break>
+  <div class="hero">
+    <h2>Designed in New York</h2>
+  </div>
 
+  <div class= "sp_end" id= "end">
+    <h3> Portfolio </h3>
+    <p> Coming Soon </p>
 
-  <div id= "end">
-    <p class="name"> Portfolio </p><break></break>
-    <p class="description"> Coming Soon </p>
+    <h3> Team </h3>
+    <p> We're Hiring! </p>
 
-    <p class="name"> Team </p><break></break>
-    <p class="descroption"> We're Hiring! </p><break></break>
+    <h3> Contact </h3>
+    <p> Phone: (555)-555-5555 </p>
+    <p> E-mail: test@example.com </p>
+    <p> Twitter &copy; test </p>
+  </div>
 
-    <p class= "name"> Contact </p><break></break>
-    <p class="description"> Phone: (555)-555-5555 </p>
-    <p class="description"> E-mail: test@example.com </p>
-    <p class="description"> Twitter &copy; test </p>
+  <div id="footer">
+    <p> &copy; Broadway 2018
+      <a class="btn-nav" href="#"> Home </a>
+      <a class="btn-nav" href="#"> About </a>
+      <a class="btn-nav" href="#"> Work </a>
+      <a class="btn-nav" href="#"> Team </a>
+      <a class="btn-nav" href="#"> Contact </a>
+    </p>
   </div>
 </body>
-<div id="footer">
-  <p> &copy; Broadway 2018 <a href="#"> Home </a> <a href="#"> About </a> <a href="#"> Work </a> <a href="#"> Team </a> <a href="#"> Contact </a>
-</div>
+
 </html>
