--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div class= "hd" id = "header">
-    <h1> Browadway Design </h1>
+    <h1> Broadway Design </h1>
 
     <p><a class="btn-nav" href="#header"> Home </a></p>
     <p><a class="btn-nav" href="#main"> Process </a></p>
